<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context="com.example.hp.credainatcon17.NatconRegister4">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/Natcon4_textInputLayout_delegate_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edtNatcon4_delegate_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/delegate_name"
                android:inputType="text"
                android:textColorHint="#000" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/txtNatcon4_chaptername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Natcon4_textInputLayout_delegate_name"
            android:paddingTop="10dp"
            android:text="@string/chapter_name"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerNatcon4_chaptername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtNatcon4_chaptername"
            tools:entries="@array/entries_hello"
            tools:spinnerMode="dropdown" />



        <android.support.design.widget.TextInputLayout
            android:id="@+id/Natcon4_textInputLayout_company_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/spinnerNatcon4_chaptername">

            <EditText
                android:id="@+id/edtNatcon4_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company_name"
                android:inputType="text"
                android:textColorHint="#000" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/Natcon4_textInputLayout_passport_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/Natcon4_textInputLayout_company_name">

            <EditText
                android:id="@+id/edtNatcon4_passport_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Passport Number"
                android:inputType="text"
                android:textColorHint="#000" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Natcon4_textInputLayout_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:focusable="false"
            android:layout_below="@id/Natcon4_textInputLayout_passport_number">

            <EditText
                android:id="@+id/edtNatcon4_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dob4_dd_mm_yyyy"
                android:focusable="false"
                android:drawableEnd="@drawable/ic_event_black_24dp"
                android:textColorHint="#000" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Natcon4_textInputLayout_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/Natcon4_textInputLayout_dob">

            <EditText
                android:id="@+id/edtNatcon4_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:inputType="text"
                android:textColorHint="#000" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Natcon4_textInputLayout_contact_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/Natcon4_textInputLayout_email">

            <EditText
                android:id="@+id/edtNatcon4_contact_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_number"
                android:inputType="number"
                android:textColorHint="#000" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/rgNatcon4_mealspreference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/meal_preference_Natcon4_text"
            android:orientation="horizontal"
            android:paddingTop="10dp">


            <RadioButton
                android:id="@+id/rbtnNatcon4_mealpreference_nonveg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Non Veg" />

            <RadioButton
                android:id="@+id/rbtnNatcon4_mealpreference_veg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="Veg" />


            <RadioButton
                android:id="@+id/rbtnNatcon4_mealpreference_vegjain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="Veg(Jain)" />

        </RadioGroup>

        <TextView
            android:id="@+id/meal_preference_Natcon4_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meal_preference"
            android:textSize="18dp"
            android:paddingTop="10dp"
            android:layout_marginLeft="4dp"
            android:layout_below="@+id/Natcon4_textInputLayout_contact_number"
            />

        <CheckBox
            android:id="@+id/chkNatcon4_children"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rgNatcon4_mealspreference"
            android:text="@string/any_children"
            android:textSize="18dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Natcon4_textInputLayout_child_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/chkNatcon4_children">

            <EditText
                android:id="@+id/edtNatcon4_child_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/child_name"
                android:inputType="text"
                android:textColorHint="#000" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Natcon4_textInputLayout_child_passport_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Natcon4_textInputLayout_child_name">

            <EditText
                android:id="@+id/edtNatcon4_child_passport_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/child_passport_number"
                android:inputType="textPersonName"
                android:textColorHint="#000" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Natcon4_textInputLayout_child_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:focusable="false"
            android:layout_below="@id/Natcon4_textInputLayout_child_passport_number">

            <EditText
                android:id="@+id/edtNatcon4_child_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/child_dob_dd_mm_yyyy"
                android:focusable="false"
                android:drawableEnd="@drawable/ic_event_black_24dp"
                android:textColorHint="#000" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnNatcon4_next4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="Next"
            android:textColor="#FFF"
            android:layout_below="@id/Natcon4_textInputLayout_child_dob"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</ScrollView>

